; see: https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = ayo
version = attr: ayo.__version__
description = "High level API for asyncio, but friendly with code that doesn't use it"
long_description = file: README.md
keywords = asyncio, nursery, event loop
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
include_package_data = True
packages = find:

[mypy]
ignore_missing_imports=1
follow_imports=silent

[flake8]
max-line-length = 88
exclude = doc/*,build/*,.tox,.eggs
max-complexity = 7

[tool:pytest]
addopts = -rsxX -q
testpaths = tests

